force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/full_application__c.field-meta.xml
<CustomField>
    <fullName>full_application__c</fullName>
    <label>OU - Full Application 1.0</label>
    <referenceTo>Form_LCF_Full_App_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcome 1.0</relationshipLabel>
    <relationshipName>full_application_outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>