force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/full_award_setup__c.field-meta.xml
<CustomField>
    <fullName>full_award_setup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form LCF Full Award Setup 1.0</label>
    <referenceTo>Form_LCF_Setup_1__c</referenceTo>
    <relationshipLabel>Form LCF Outcomes</relationshipLabel>
    <relationshipName>setup_outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>