force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/key__c.field-meta.xml
<CustomField>
    <fullName>key__c</fullName>
    <description>Application ID:RecordType:Description</description>
    <externalId>true</externalId>
    <inlineHelpText>Application ID:RecordType:Description</inlineHelpText>
    <label>Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>