force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_baseline__c.field-meta.xml
<CustomField>
    <fullName>ou_baseline__c</fullName>
    <description>What would be expected to happen as compared to what would have happened had there been no intervention. For example, a modelled comparison indicates that only 20% of young people who complete existing training programmes go onto stable work placements.</description>
    <inlineHelpText>Summarise the baseline methodology</inlineHelpText>
    <label>OU - Baseline</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>