force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_description__c.field-meta.xml
<CustomField>
    <fullName>ou_description__c</fullName>
    <description>For example, an increase in the number of young people who are in sustained employment.</description>
    <inlineHelpText>Briefly describe the outcome</inlineHelpText>
    <label>OU - Description</label>
    <type>TextArea</type>
</CustomField>