force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_measure__c.field-meta.xml
<CustomField>
    <fullName>ou_measure__c</fullName>
    <description>Outline the proposed metrics you will use to measure the effectiveness of the project (e.g. a specific data set that will enable you to count the number of outcomes successfully delivered)</description>
    <inlineHelpText>How will the outcome be measured?</inlineHelpText>
    <label>OU - Measure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>