force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_payment__c.field-meta.xml
<CustomField>
    <fullName>ou_payment__c</fullName>
    <description>If you are not planning to pay on the basis of an individual achieving an outcome, divide the total expected outcome payment by the total number of individuals expected to achieve a successful outcome to provide an indication of what the payment per user will be.</description>
    <inlineHelpText>How much will be paid per outcome per service user</inlineHelpText>
    <label>OU - Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>