force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_service_users__c.field-meta.xml
<CustomField>
    <fullName>ou_service_users__c</fullName>
    <inlineHelpText>What is the maximum number of service users expected to achieve this outcome?</inlineHelpText>
    <label>OU - Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>