force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_social_impact__c.field-meta.xml
<CustomField>
    <fullName>ou_social_impact__c</fullName>
    <description>For example, employment opportunities provided by the training enable young people to gain the skills and confidence needed to enter into and sustain work, positively impacting their standard of life and mental wellbeing.</description>
    <inlineHelpText>Summarise the impact of the outcome on the service user (and their immediate local community)</inlineHelpText>
    <label>OU - Social Impact</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>