force-app/main/default/objects/Form_LCF_Outcome_1__c/fields/ou_timescale__c.field-meta.xml
<CustomField>
    <fullName>ou_timescale__c</fullName>
    <description>For example, entry into stable work placement, and sustainment of placement at 6 and 12 months.</description>
    <inlineHelpText>Outline the time needed for a service user to achieve the outcome</inlineHelpText>
    <label>OU - Timescale</label>
    <type>TextArea</type>
</CustomField>