force-app/main/default/objects/Form_LCF_Outcome_1__c/recordTypes/EOI.recordType-meta.xml
<RecordType>
    <fullName>EOI</fullName>
    <active>true</active>
    <description>Expression of Interest Record Type</description>
    <label>EOI</label>
</RecordType>