force-app/main/default/objects/Form_LCF_Outcome_1__c/recordTypes/Setup.recordType-meta.xml
<RecordType>
    <fullName>Setup</fullName>
    <active>true</active>
    <description>Full Award Setup Record Type</description>
    <label>Setup</label>
</RecordType>